--- a/sass/blocks/index/calculate.scss
+++ b/sass/blocks/index/calculate.scss
@@ -235,6 +235,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s ease;
+  background-color: $white;
 
   @media (max-width: $mobile-width-only) {
     margin-top: 4px;
