--- a/sass/blocks/index/calculate.scss
+++ b/sass/blocks/index/calculate.scss
@@ -331,7 +331,7 @@
   @include offset(0, -1px 0 0 4px);
   width: 97%;
   height: 1px;
-  background-color: $blue;
+  background: linear-gradient(90deg, rgb(68, 150, 246) 0%, rgb(68, 150, 246) 18%, rgb(229, 229, 229) 18%, rgb(229, 229, 229) 100%);
 
   @media (max-width: $mobile-width-only) {
     position: relative;
@@ -361,6 +361,7 @@
 
 .calculate__input-range--bathroom {
   max-width: 215px;
+  background: linear-gradient(90deg, rgb(68, 150, 246) 0%, rgb(68, 150, 246) 40%, rgb(229, 229, 229) 40%, rgb(229, 229, 229) 100%);
 }
 
 .calculate__note {
