--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ a {
   color: #666666;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  cursor: pointer;
+  cursor: url("../img/brick-icon.svg"), auto;
   transition: 0.3s ease;
   background-color: #ffffff; }
   @media (max-width: 767px) {
@@ -772,6 +772,7 @@ a {
   font-family: "Gilroy", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
+  cursor: url("../img/brick-icon.svg"), auto;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.05em;
