--- a/sass/blocks/index/calculate.scss
+++ b/sass/blocks/index/calculate.scss
@@ -233,7 +233,7 @@
   color: $grey2;
   border: 1px solid $grey1;
   border-radius: 5px;
-  cursor: pointer;
+  cursor: url("../img/brick-icon.svg"), auto;
   transition: 0.3s ease;
   background-color: $white;
 
