--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ a {
   color: #666666;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  cursor: url("../img/brick-icon.svg"), auto;
+  cursor: pointer;
   transition: 0.3s ease;
   background-color: #ffffff; }
   @media (max-width: 767px) {
@@ -772,7 +772,6 @@ a {
   font-family: "Gilroy", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
-  cursor: url("../img/brick-icon.svg"), auto;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.05em;
@@ -791,7 +790,8 @@ a {
   width: 97%;
   height: 1px;
   background: linear-gradient(90deg, #4496f6 0%, #4496f6 15%, #e5e5e5 15%, #e5e5e5 100%);
-  transition: 0.3s ease; }
+  transition: 0.3s ease;
+  cursor: pointer; }
   @media (max-width: 767px) {
     .calculate__input-range {
       position: relative;
